exports[`no-await-in-promise-methods > invalid(1): Promise.all([await promise]) 1`] = `

  1 | Promise.all([await promise])

`;

exports[`no-await-in-promise-methods > invalid(1): Promise.all([await promise]) 2`] = `

Message:
> 1 | Promise.all([await promise])
    |              ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([promise])

`;

exports[`no-await-in-promise-methods > invalid(10): Promise.all([await await promise]) 1`] = `

  1 | Promise.all([await await promise])

`;

exports[`no-await-in-promise-methods > invalid(10): Promise.all([await await promise]) 2`] = `

Message:
> 1 | Promise.all([await await promise])
    |              ^^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([await promise])

`;

exports[`no-await-in-promise-methods > invalid(11): Promise.all([...foo, await promise1, await promise2]) 1`] = `

  1 | Promise.all([...foo, await promise1, await promise2])

`;

exports[`no-await-in-promise-methods > invalid(11): Promise.all([...foo, await promise1, await promise2]) 2`] = `

Message:
> 1 | Promise.all([...foo, await promise1, await promise2])
    |                      ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([...foo, promise1, await promise2])

`;

exports[`no-await-in-promise-methods > invalid(11): Promise.all([...foo, await promise1, await promise2]) 3`] = `

Message:
> 1 | Promise.all([...foo, await promise1, await promise2])
    |                                      ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([...foo, await promise1, promise2])

`;

exports[`no-await-in-promise-methods > invalid(12): Promise.all([await promise1, await promise2]) 1`] = `

  1 | Promise.all([await promise1, await promise2])

`;

exports[`no-await-in-promise-methods > invalid(12): Promise.all([await promise1, await promise2]) 2`] = `

Message:
> 1 | Promise.all([await promise1, await promise2])
    |              ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([promise1, await promise2])

`;

exports[`no-await-in-promise-methods > invalid(12): Promise.all([await promise1, await promise2]) 3`] = `

Message:
> 1 | Promise.all([await promise1, await promise2])
    |                              ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([await promise1, promise2])

`;

exports[`no-await-in-promise-methods > invalid(13): Promise.any([await a, await b, await c]) 1`] = `

  1 | Promise.any([await a, await b, await c])

`;

exports[`no-await-in-promise-methods > invalid(13): Promise.any([await a, await b, await c]) 2`] = `

Message:
> 1 | Promise.any([await a, await b, await c])
    |              ^^^^^^^ Avoid \`await\` inside \`Promise.any()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.any([a, await b, await c])

`;

exports[`no-await-in-promise-methods > invalid(13): Promise.any([await a, await b, await c]) 3`] = `

Message:
> 1 | Promise.any([await a, await b, await c])
    |                       ^^^^^^^ Avoid \`await\` inside \`Promise.any()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.any([await a, b, await c])

`;

exports[`no-await-in-promise-methods > invalid(13): Promise.any([await a, await b, await c]) 4`] = `

Message:
> 1 | Promise.any([await a, await b, await c])
    |                                ^^^^^^^ Avoid \`await\` inside \`Promise.any()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.any([await a, await b, c])

`;

exports[`no-await-in-promise-methods > invalid(14): Promise.all([await /* comment*/ promise]) 1`] = `

  1 | Promise.all([await /* comment*/ promise])

`;

exports[`no-await-in-promise-methods > invalid(14): Promise.all([await /* comment*/ promise]) 2`] = `

Message:
> 1 | Promise.all([await /* comment*/ promise])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([/* comment*/ promise])

`;

exports[`no-await-in-promise-methods > invalid(15): Promise.all([(await promise, 0)]) 1`] = `

  1 | Promise.all([(await promise, 0)])

`;

exports[`no-await-in-promise-methods > invalid(15): Promise.all([(await promise, 0)]) 2`] = `

Message:
> 1 | Promise.all([(await promise, 0)])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(16): Promise.all([(await promise).foo, anotherPromise]) 1`] = `

  1 | Promise.all([(await promise).foo, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(16): Promise.all([(await promise).foo, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([(await promise).foo, anotherPromise])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(17): Promise.all([foo ? await promise : anotherPromise, anotherPromise]) 1`] = `

  1 | Promise.all([foo ? await promise : anotherPromise, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(17): Promise.all([foo ? await promise : anotherPromise, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([foo ? await promise : anotherPromise, anotherPromise])
    |                    ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(18): Promise.all([foo && await promise, anotherPromise]) 1`] = `

  1 | Promise.all([foo && await promise, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(18): Promise.all([foo && await promise, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([foo && await promise, anotherPromise])
    |                     ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(19): Promise.all([fetch(await getUrl()), anotherPromise]) 1`] = `

  1 | Promise.all([fetch(await getUrl()), anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(19): Promise.all([fetch(await getUrl()), anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([fetch(await getUrl()), anotherPromise])
    |                    ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(2): Promise.allSettled([await promise]) 1`] = `

  1 | Promise.allSettled([await promise])

`;

exports[`no-await-in-promise-methods > invalid(2): Promise.allSettled([await promise]) 2`] = `

Message:
> 1 | Promise.allSettled([await promise])
    |                     ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.allSettled()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.allSettled([promise])

`;

exports[`no-await-in-promise-methods > invalid(20): Promise.all([...await promises, anotherPromise]) 1`] = `

  1 | Promise.all([...await promises, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(20): Promise.all([...await promises, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([...await promises, anotherPromise])
    |                 ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(21): Promise.all([{foo: await promise}]) 1`] = `

  1 | Promise.all([{foo: await promise}])

`;

exports[`no-await-in-promise-methods > invalid(21): Promise.all([{foo: await promise}]) 2`] = `

Message:
> 1 | Promise.all([{foo: await promise}])
    |                    ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(22): Promise.all([[await promise]]) 1`] = `

  1 | Promise.all([[await promise]])

`;

exports[`no-await-in-promise-methods > invalid(22): Promise.all([[await promise]]) 2`] = `

Message:
> 1 | Promise.all([[await promise]])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(23): Promise.all([(await promise1) + (await promise2)]) 1`] = `

  1 | Promise.all([(await promise1) + (await promise2)])

`;

exports[`no-await-in-promise-methods > invalid(23): Promise.all([(await promise1) + (await promise2)]) 2`] = `

Message:
> 1 | Promise.all([(await promise1) + (await promise2)])
    |               ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(23): Promise.all([(await promise1) + (await promise2)]) 3`] = `

Message:
> 1 | Promise.all([(await promise1) + (await promise2)])
    |                                  ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(24): Promise.all([await (await promise).foo]) 1`] = `

  1 | Promise.all([await (await promise).foo])

`;

exports[`no-await-in-promise-methods > invalid(24): Promise.all([await (await promise).foo]) 2`] = `

Message:
> 1 | Promise.all([await (await promise).foo])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([(await promise).foo])

`;

exports[`no-await-in-promise-methods > invalid(25): Promise.all([Promise.all([await promise]), anotherPromise]) 1`] = `

  1 | Promise.all([Promise.all([await promise]), anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(25): Promise.all([Promise.all([await promise]), anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([Promise.all([await promise]), anotherPromise])
    |                           ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([Promise.all([promise]), anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(26): Promise.all([async () => {}, (await promise).foo]) 1`] = `

  1 | Promise.all([async () => {}, (await promise).foo])

`;

exports[`no-await-in-promise-methods > invalid(26): Promise.all([async () => {}, (await promise).foo]) 2`] = `

Message:
> 1 | Promise.all([async () => {}, (await promise).foo])
    |                               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(27): Promise.all([(await promise as Foo).bar]) 1`] = `

  1 | Promise.all([(await promise as Foo).bar])

`;

exports[`no-await-in-promise-methods > invalid(27): Promise.all([(await promise as Foo).bar]) 2`] = `

Message:
> 1 | Promise.all([(await promise as Foo).bar])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(28): Promise.all([(await promise)!]) 1`] = `

  1 | Promise.all([(await promise)!])

`;

exports[`no-await-in-promise-methods > invalid(28): Promise.all([(await promise)!]) 2`] = `

Message:
> 1 | Promise.all([(await promise)!])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(29): Promise.all([(await promise)?.foo, anotherPromise]) 1`] = `

  1 | Promise.all([(await promise)?.foo, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(29): Promise.all([(await promise)?.foo, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([(await promise)?.foo, anotherPromise])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(3): Promise.any([await promise]) 1`] = `

  1 | Promise.any([await promise])

`;

exports[`no-await-in-promise-methods > invalid(3): Promise.any([await promise]) 2`] = `

Message:
> 1 | Promise.any([await promise])
    |              ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.any()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.any([promise])

`;

exports[`no-await-in-promise-methods > invalid(30): Promise.all([tag\`\${await promise}\`, anotherPromise]) 1`] = `

  1 | Promise.all([tag\`\${await promise}\`, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(30): Promise.all([tag\`\${await promise}\`, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([tag\`\${await promise}\`, anotherPromise])
    |                    ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(31): Promise.all([<div>{await promise}</div>, anotherPromise]) 1`] = `

  1 | Promise.all([<div>{await promise}</div>, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(31): Promise.all([<div>{await promise}</div>, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([<div>{await promise}</div>, anotherPromise])
    |                    ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(32): Promise.all([await foo(await promise)]) 1`] = `

  1 | Promise.all([await foo(await promise)])

`;

exports[`no-await-in-promise-methods > invalid(32): Promise.all([await foo(await promise)]) 2`] = `

Message:
> 1 | Promise.all([await foo(await promise)])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([foo(await promise)])

`;

exports[`no-await-in-promise-methods > invalid(33): Promise.allSettled([(await promise).foo, anotherPromise]) 1`] = `

  1 | Promise.allSettled([(await promise).foo, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(33): Promise.allSettled([(await promise).foo, anotherPromise]) 2`] = `

Message:
> 1 | Promise.allSettled([(await promise).foo, anotherPromise])
    |                      ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.allSettled()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(34): Promise.any([(await promise).foo, anotherPromise]) 1`] = `

  1 | Promise.any([(await promise).foo, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(34): Promise.any([(await promise).foo, anotherPromise]) 2`] = `

Message:
> 1 | Promise.any([(await promise).foo, anotherPromise])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.any()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(35): Promise.race([(await promise).foo, anotherPromise]) 1`] = `

  1 | Promise.race([(await promise).foo, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(35): Promise.race([(await promise).foo, anotherPromise]) 2`] = `

Message:
> 1 | Promise.race([(await promise).foo, anotherPromise])
    |                ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.race()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(36): Promise.all([await promise1, (await promise2).foo]) 1`] = `

  1 | Promise.all([await promise1, (await promise2).foo])

`;

exports[`no-await-in-promise-methods > invalid(36): Promise.all([await promise1, (await promise2).foo]) 2`] = `

Message:
> 1 | Promise.all([await promise1, (await promise2).foo])
    |              ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([promise1, (await promise2).foo])

`;

exports[`no-await-in-promise-methods > invalid(36): Promise.all([await promise1, (await promise2).foo]) 3`] = `

Message:
> 1 | Promise.all([await promise1, (await promise2).foo])
    |                               ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(37): Promise.all([(await promise)]) 1`] = `

  1 | Promise.all([(await promise)])

`;

exports[`no-await-in-promise-methods > invalid(37): Promise.all([(await promise)]) 2`] = `

Message:
> 1 | Promise.all([(await promise)])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([(promise)])

`;

exports[`no-await-in-promise-methods > invalid(38): Promise.all([((await promise)).foo]) 1`] = `

  1 | Promise.all([((await promise)).foo])

`;

exports[`no-await-in-promise-methods > invalid(38): Promise.all([((await promise)).foo]) 2`] = `

Message:
> 1 | Promise.all([((await promise)).foo])
    |                ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(39): Promise.all([new Foo(await bar)]) 1`] = `

  1 | Promise.all([new Foo(await bar)])

`;

exports[`no-await-in-promise-methods > invalid(39): Promise.all([new Foo(await bar)]) 2`] = `

Message:
> 1 | Promise.all([new Foo(await bar)])
    |                      ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(4): Promise.race([await promise]) 1`] = `

  1 | Promise.race([await promise])

`;

exports[`no-await-in-promise-methods > invalid(4): Promise.race([await promise]) 2`] = `

Message:
> 1 | Promise.race([await promise])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.race()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.race([promise])

`;

exports[`no-await-in-promise-methods > invalid(40): Promise.all([foo[await bar]]) 1`] = `

  1 | Promise.all([foo[await bar]])

`;

exports[`no-await-in-promise-methods > invalid(40): Promise.all([foo[await bar]]) 2`] = `

Message:
> 1 | Promise.all([foo[await bar]])
    |                  ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(41): Promise.all([foo?.[await bar]]) 1`] = `

  1 | Promise.all([foo?.[await bar]])

`;

exports[`no-await-in-promise-methods > invalid(41): Promise.all([foo?.[await bar]]) 2`] = `

Message:
> 1 | Promise.all([foo?.[await bar]])
    |                    ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(42): Promise.all([(await promise)()]) 1`] = `

  1 | Promise.all([(await promise)()])

`;

exports[`no-await-in-promise-methods > invalid(42): Promise.all([(await promise)()]) 2`] = `

Message:
> 1 | Promise.all([(await promise)()])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(43): Promise.all([(await tag)\`foo\`]) 1`] = `

  1 | Promise.all([(await tag)\`foo\`])

`;

exports[`no-await-in-promise-methods > invalid(43): Promise.all([(await tag)\`foo\`]) 2`] = `

Message:
> 1 | Promise.all([(await tag)\`foo\`])
    |               ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(44): Promise.all([\`\${await promise}\`, anotherPromise]) 1`] = `

  1 | Promise.all([\`\${await promise}\`, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(44): Promise.all([\`\${await promise}\`, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([\`\${await promise}\`, anotherPromise])
    |                 ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(45): Promise.all([foo ?? await bar]) 1`] = `

  1 | Promise.all([foo ?? await bar])

`;

exports[`no-await-in-promise-methods > invalid(45): Promise.all([foo ?? await bar]) 2`] = `

Message:
> 1 | Promise.all([foo ?? await bar])
    |                     ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(46): Promise.all([!await foo, anotherPromise]) 1`] = `

  1 | Promise.all([!await foo, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(46): Promise.all([!await foo, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([!await foo, anotherPromise])
    |               ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(47): Promise.all([(foo = await bar)]) 1`] = `

  1 | Promise.all([(foo = await bar)])

`;

exports[`no-await-in-promise-methods > invalid(47): Promise.all([(foo = await bar)]) 2`] = `

Message:
> 1 | Promise.all([(foo = await bar)])
    |                     ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(48): Promise.all([({foo} = await bar)]) 1`] = `

  1 | Promise.all([({foo} = await bar)])

`;

exports[`no-await-in-promise-methods > invalid(48): Promise.all([({foo} = await bar)]) 2`] = `

Message:
> 1 | Promise.all([({foo} = await bar)])
    |                       ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(49): Promise.all([(foo, await bar)]) 1`] = `

  1 | Promise.all([(foo, await bar)])

`;

exports[`no-await-in-promise-methods > invalid(49): Promise.all([(foo, await bar)]) 2`] = `

Message:
> 1 | Promise.all([(foo, await bar)])
    |                    ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(5): Promise.all([, await promise]) 1`] = `

  1 | Promise.all([, await promise])

`;

exports[`no-await-in-promise-methods > invalid(5): Promise.all([, await promise]) 2`] = `

Message:
> 1 | Promise.all([, await promise])
    |                ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([, promise])

`;

exports[`no-await-in-promise-methods > invalid(50): Promise.all([...(await promise).items, anotherPromise]) 1`] = `

  1 | Promise.all([...(await promise).items, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(50): Promise.all([...(await promise).items, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([...(await promise).items, anotherPromise])
    |                  ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(51): Promise.all([import(await getPath()), anotherPromise]) 1`] = `

  1 | Promise.all([import(await getPath()), anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(51): Promise.all([import(await getPath()), anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([import(await getPath()), anotherPromise])
    |                     ^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(52): Promise.all([await promise.then(foo)]) 1`] = `

  1 | Promise.all([await promise.then(foo)])

`;

exports[`no-await-in-promise-methods > invalid(52): Promise.all([await promise.then(foo)]) 2`] = `

Message:
> 1 | Promise.all([await promise.then(foo)])
    |              ^^^^^^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([promise.then(foo)])

`;

exports[`no-await-in-promise-methods > invalid(53): Promise.all([{[await key]: value}]) 1`] = `

  1 | Promise.all([{[await key]: value}])

`;

exports[`no-await-in-promise-methods > invalid(53): Promise.all([{[await key]: value}]) 2`] = `

Message:
> 1 | Promise.all([{[await key]: value}])
    |                ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(54): Promise.all([{async [await key]() {}}]) 1`] = `

  1 | Promise.all([{async [await key]() {}}])

`;

exports[`no-await-in-promise-methods > invalid(54): Promise.all([{async [await key]() {}}]) 2`] = `

Message:
> 1 | Promise.all([{async [await key]() {}}])
    |                      ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(55): Promise.all([class { [await key]() {} }]) 1`] = `

  1 | Promise.all([class { [await key]() {} }])

`;

exports[`no-await-in-promise-methods > invalid(55): Promise.all([class { [await key]() {} }]) 2`] = `

Message:
> 1 | Promise.all([class { [await key]() {} }])
    |                       ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(56): Promise.all([class extends (await Base) {}]) 1`] = `

  1 | Promise.all([class extends (await Base) {}])

`;

exports[`no-await-in-promise-methods > invalid(56): Promise.all([class extends (await Base) {}]) 2`] = `

Message:
> 1 | Promise.all([class extends (await Base) {}])
    |                             ^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(57): Promise.all([foo([await promise])]) 1`] = `

  1 | Promise.all([foo([await promise])])

`;

exports[`no-await-in-promise-methods > invalid(57): Promise.all([foo([await promise])]) 2`] = `

Message:
> 1 | Promise.all([foo([await promise])])
    |                   ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(58): Promise.all([Promise.all(await promises), anotherPromise]) 1`] = `

  1 | Promise.all([Promise.all(await promises), anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(58): Promise.all([Promise.all(await promises), anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([Promise.all(await promises), anotherPromise])
    |                          ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(59): Promise.all([await Promise.all([await promise])]) 1`] = `

  1 | Promise.all([await Promise.all([await promise])])

`;

exports[`no-await-in-promise-methods > invalid(59): Promise.all([await Promise.all([await promise])]) 2`] = `

Message:
> 1 | Promise.all([await Promise.all([await promise])])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([Promise.all([await promise])])

`;

exports[`no-await-in-promise-methods > invalid(59): Promise.all([await Promise.all([await promise])]) 3`] = `

Message:
> 1 | Promise.all([await Promise.all([await promise])])
    |                                 ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([await Promise.all([promise])])

`;

exports[`no-await-in-promise-methods > invalid(6): Promise.all([await promise,]) 1`] = `

  1 | Promise.all([await promise,])

`;

exports[`no-await-in-promise-methods > invalid(6): Promise.all([await promise,]) 2`] = `

Message:
> 1 | Promise.all([await promise,])
    |              ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([promise,])

`;

exports[`no-await-in-promise-methods > invalid(60): async function foo() { return Promise.all([(await promise).foo, anotherPromise]); } 1`] = `

  1 | async function foo() { return Promise.all([(await promise).foo, anotherPromise]); }

`;

exports[`no-await-in-promise-methods > invalid(60): async function foo() { return Promise.all([(await promise).foo, anotherPromise]); } 2`] = `

Message:
> 1 | async function foo() { return Promise.all([(await promise).foo, anotherPromise]); }
    |                                             ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(61): Promise.all([\n\tawait\n\t\tpromise,\n\tanotherPromise,\n]); 1`] = `

  1 | Promise.all([
  2 | 	await
  3 | 		promise,
  4 | 	anotherPromise,
  5 | ]);

`;

exports[`no-await-in-promise-methods > invalid(61): Promise.all([\n\tawait\n\t\tpromise,\n\tanotherPromise,\n]); 2`] = `

Message:
  1 | Promise.all([
> 2 | 	await
    | 	^^^^^
> 3 | 		promise,
    | ^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.
  4 | 	anotherPromise,
  5 | ]);

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([
  2 | 	promise,
  3 | 	anotherPromise,
  4 | ]);

`;

exports[`no-await-in-promise-methods > invalid(62): Promise.all([await promise as Foo]) 1`] = `

  1 | Promise.all([await promise as Foo])

`;

exports[`no-await-in-promise-methods > invalid(62): Promise.all([await promise as Foo]) 2`] = `

Message:
> 1 | Promise.all([await promise as Foo])
    |              ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(63): Promise.all([await promise satisfies Foo]) 1`] = `

  1 | Promise.all([await promise satisfies Foo])

`;

exports[`no-await-in-promise-methods > invalid(63): Promise.all([await promise satisfies Foo]) 2`] = `

Message:
> 1 | Promise.all([await promise satisfies Foo])
    |              ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(64): Promise.all([<Foo>await promise]) 1`] = `

  1 | Promise.all([<Foo>await promise])

`;

exports[`no-await-in-promise-methods > invalid(64): Promise.all([<Foo>await promise]) 2`] = `

Message:
> 1 | Promise.all([<Foo>await promise])
    |                   ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(65): Promise.all([await promise!]) 1`] = `

  1 | Promise.all([await promise!])

`;

exports[`no-await-in-promise-methods > invalid(65): Promise.all([await promise!]) 2`] = `

Message:
> 1 | Promise.all([await promise!])
    |              ^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([promise!])

`;

exports[`no-await-in-promise-methods > invalid(66): Promise.all([(await promise)<Foo>()]) 1`] = `

  1 | Promise.all([(await promise)<Foo>()])

`;

exports[`no-await-in-promise-methods > invalid(66): Promise.all([(await promise)<Foo>()]) 2`] = `

Message:
> 1 | Promise.all([(await promise)<Foo>()])
    |               ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(67): Promise.all([<Foo bar={await promise} />, anotherPromise]) 1`] = `

  1 | Promise.all([<Foo bar={await promise} />, anotherPromise])

`;

exports[`no-await-in-promise-methods > invalid(67): Promise.all([<Foo bar={await promise} />, anotherPromise]) 2`] = `

Message:
> 1 | Promise.all([<Foo bar={await promise} />, anotherPromise])
    |                        ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

`;

exports[`no-await-in-promise-methods > invalid(7): Promise.all([await promise],) 1`] = `

  1 | Promise.all([await promise],)

`;

exports[`no-await-in-promise-methods > invalid(7): Promise.all([await promise],) 2`] = `

Message:
> 1 | Promise.all([await promise],)
    |              ^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([promise],)

`;

exports[`no-await-in-promise-methods > invalid(8): Promise.all([await (0, promise)],) 1`] = `

  1 | Promise.all([await (0, promise)],)

`;

exports[`no-await-in-promise-methods > invalid(8): Promise.all([await (0, promise)],) 2`] = `

Message:
> 1 | Promise.all([await (0, promise)],)
    |              ^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([(0, promise)],)

`;

exports[`no-await-in-promise-methods > invalid(9): Promise.all([await (( promise ))]) 1`] = `

  1 | Promise.all([await (( promise ))])

`;

exports[`no-await-in-promise-methods > invalid(9): Promise.all([await (( promise ))]) 2`] = `

Message:
> 1 | Promise.all([await (( promise ))])
    |              ^^^^^^^^^^^^^^^^^^^ Avoid \`await\` inside \`Promise.all()\` arguments to prevent delaying the call.

Suggestion 1/1: Remove \`await\`.:
  1 | Promise.all([(( promise ))])

`;
